--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <title>Bonsai Forms Demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="pure-min.css"/>
+    <link rel="stylesheet" href="grids-responsive-min.css">
+    <link rel="stylesheet" href="styles.css"/>
     <meta charset="utf-8"/>
   </head>
-  <body style="padding: 2em;">
-    <h1>Bonsai Forms Demo</h1>
-    <div id="main">
-      <p class="loading">Loading ...</p>
-    </div>
+  <body id="main">
+    <p>Loading ...</p>
   </body>
   <script type='text/javascript' src='app.js'></script>
 </html>
